[desktop-pwas] Remove ink drop from app menu button in immersive fullscreen.

This CL fixes an issue where the app menu button would disappear because
it was rendered to a layer in immersive fullscreen mode which doesn't
paint child layers. This has been fixed by disabling and reenabling the
ink drop when showing and hiding the immersive fullscreen view.

Bug: 787640
Change-Id: I17872b1a7c95223b1a91314de65d6aa3c1b9f1ec